--- a/container/Dockerfile-dev
+++ b/container/Dockerfile-dev
@@ -1,6 +1,8 @@
 FROM python:3-alpine
+RUN apk add build-base
 COPY ./mkdocs/ /mkdocs/
 WORKDIR /mkdocs/
-RUN pip install mkdocs mkdocs-bootswatch
+RUN pip install mkdocs \
+mkdocs-material
 EXPOSE 8080
 CMD ["mkdocs", "serve"]
