--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,6 +14,6 @@ jobs:
           path: docs
           username: jamct
           password: ${{ secrets.GITHUB_TOKEN }}
-          repository: $GITHUB_REPOSITORY/docs
+          repository: ${{ env.GITHUB_REPOSITORY }}/docs
           registry: docker.pkg.github.com
           tags: latest
