--- a/container/Dockerfile-dev
+++ b/container/Dockerfile-dev
@@ -2,7 +2,6 @@ FROM python:3-alpine
 RUN apk add build-base
 COPY ./mkdocs/ /mkdocs/
 WORKDIR /mkdocs/
-RUN pip install mkdocs \
-mkdocs-material
+RUN pip install mkdocs mkdocs-material
 EXPOSE 8080
 CMD ["mkdocs", "serve"]
